# CrossPlatform-CouchbasePython

./: .gitignore  CMakeLists.txt  README.md  couchbase_bindings.py  couchbase_lite_cffi.cpp  couchbase_lite_cffi.h  example.py  log.cat
lib/: couchbase_lite_cffi.dylib
libs/android/libcblite/include/cbl/: CBL_Edition.h
libs/android/libcblite/lib/arm64-v8a/cmake/CouchbaseLite/: CouchbaseLiteTargets-minsizerel.cmake
libs/android/libcblite/lib/armeabi-v7a/cmake/CouchbaseLite/: CouchbaseLiteTargets-minsizerel.cmake
libs/android/libcblite/lib/i686-linux-android/cmake/CouchbaseLite/: CouchbaseLiteConfigVersion.cmake  CouchbaseLiteTargets-minsizerel.cmake  CouchbaseLiteTargets.cmake
libs/android/libcblite/lib/x86_64-linux-android/cmake/CouchbaseLite/: CouchbaseLiteTargets-minsizerel.cmake
libs/mac/libcblite/include/cbl/: CBL_Edition.h
libs/mac/libcblite/lib/: libcblite.3.dylib
libs/mac/libcblite/lib/cmake/CouchbaseLite/: CouchbaseLiteTargets-minsizerel.cmake  CouchbaseLiteTargets.cmake
python/cbl/: __init__.py  lib
src/: couchbase_collection.cpp  couchbase_collection.h  couchbase_collection_cffi.cpp  couchbase_collection_cffi.h  couchbase_lite.cpp  couchbase_lite.h  couchbase_lite_cff.cpp  couchbase_lite_cff.h  couchbase_replicator.cpp  couchbase_replicator.h  couchbase_replicator_cffi.cpp  couchbase_replicator_cffi.h
